video and spacing fix

--- a/_sass/detail.scss
+++ b/_sass/detail.scss
@@ -9,7 +9,7 @@
         /* ratio 16x9 */
         height: 0;
         overflow: hidden;
-        width: 60vw;
+        width: 100%;
         height: auto;
         iframe {
             position: absolute;
